# motion_planners

./: CMakeLists.txt  LICENSE  README.md  manifest.xml  motion_planners.kdev4
.kdev4/: motion_planners.kdev4
include/: Config.hpp  MotionPlanners.hpp
include/motion_planners/: Config.hpp  DualArmMotionPlanners.hpp  MotionPlanners.hpp
logs/20180813-1403/: info.yml
src/: CMakeLists.txt  DualArmMotionPlanners.cpp  Dummy.cpp  Dummy.hpp  Main.cpp  MotionPlanners.cpp  motion_planners.pc.in
src/planners/: CMakeLists.txt  CMakeLists.txt.orig  planner_factory.pc.in
src/planners/include/: PlannerFactory.hpp
src/planners/include/abstract/: AbstractPlanner.hpp  AbstractPlannerConfig.hpp
src/planners/include/wrapper/ompl/: HandleOmplConfig.hpp  OmplConfig.hpp  OmplPlanner.hpp  RobotFreeJointParameter.hpp
src/planners/include/wrapper/stomp/: HandleStompConfig.hpp  OptimizationTask.hpp  StompPlanner.hpp
src/planners/include/wrapper/trajopt/: FCLCollisionChecker.h  RobotLinkWrapper.h  RobotModelWrapper.h  TrajoptPlanner.hpp
src/planners/src/: PlannerFactory.cpp
src/planners/src/abstract/: AbstractPlanner.cpp
src/planners/src/wrappers/ompl/: HandleOmplConfig.cpp  OmplPlanner.cpp  RobotFreeJointParameter.cpp
src/planners/src/wrappers/stomp/: HandleStompConfig.cpp  OptimizationTask.cpp  StompPlanner.cpp
src/planners/src/wrappers/trajopt/: FCLCollisionChecker.cpp  RobotLinkWrapper.cpp  RobotModelWrapper.cpp  TrajoptPlanner.cpp
src/planners/stomp/: CMakeLists.txt  package.xml  stomp.pc.in
src/planners/stomp/include/stomp/: CovariantMovementPrimitive.hpp  MultivariateGaussian.hpp  PolicyImprovement.hpp  Stomp.hpp  StompConfig.hpp  StompConstrained.hpp  StompTask.hpp  StompUtils.hpp
src/planners/stomp/src/: CovariantMovementPrimitive.cpp  PolicyImprovement.cpp  Stomp.cpp  StompUtils.cpp
src/planners/stomp/test/: CMakeLists.txt  distribution_test.py  stomp_2d_test.cpp  stomp_2d_test.h  stomp_2d_test.yaml  stomp_2d_test_obstacle.yaml  stomp_2d_test_org.yaml  stomp_2d_test_plot.py  test_cmp.cpp  test_distributions_plot.py
src/planners/trajopt/: CMakeLists.txt  trajopt.pc.in
src/planners/trajopt/trajopt/: CMakeLists.txt
src/planners/trajopt/trajopt/include/trajopt/: collision_checker.hpp  collision_terms.hpp  common.hpp  configuration_space.hpp  json_marshal.hpp  kinematic_terms.hpp  problem_description.hpp  trajectory_costs.hpp  trajoptinterface.h  transform.h  typedefs.hpp  utils.hpp
src/planners/trajopt/trajopt/src/: Trajoptconfig.cpp  Trajoptconfig.h  collision_checker.cpp  collision_terms.cpp  configuration_space.cpp  json_marshal.cpp  kinematic_terms.cpp  problem_description.cpp  trajectory_costs.cpp  utils.cpp
src/planners/trajopt/trajopt/test/: CMakeLists.txt  trajoptTest.cpp  trajoptTest1.cpp
src/planners/trajopt/trajopt_ext/: CMakeLists.txt
src/planners/trajopt/trajopt_sco/: CMakeLists.txt
src/planners/trajopt/trajopt_sco/include/sco/: SQPConfig.h  bpmpd_interface.hpp  expr_ops.hpp  modeling.hpp  optimizers.hpp
src/planners/trajopt/trajopt_sco/src/: bpmpd_caller.cpp  bpmpd_interface.cpp  expr_ops.cpp  expr_vec_ops.cpp  modeling.cpp  modeling_utils.cpp  num_diff.cpp  optimizers.cpp  solver_interface.cpp
src/planners/trajopt/trajopt_sco/test/: small-problems-unit.cpp  solver-interface-unit.cpp
src/planners/trajopt/trajopt_utils/: CMakeLists.txt
src/planners/trajopt/trajopt_utils/include/utils/: macros.h
src/planners/trajopt/trajopt_utils/src/: clock.cpp  config.cpp  logging.cpp  stl_to_string.cpp
src/robot_model/: CMakeLists.txt  robot_model.pc.in
src/robot_model/include/: HelperFunctions.hpp  RobotJoint.hpp  RobotLink.hpp  RobotModel.hpp
src/robot_model/src/: HelperFunctions.cpp  RobotLink.cpp  RobotModel.cpp  RobotModel.cpp.orig
test/: CMakeLists.txt  test_Dummy.cpp  test_motion_planners.cpp
